--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
-        "lucascudo/laravel-pt-br-localization": "^3.0"
+        "lucascudo/laravel-pt-br-localization": "^3.0",
+        "spatie/laravel-permission": "^6.16"
     },
     "require-dev": {
         "facebook/webdriver": "*",
