--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
     volumes:
       - ./receita-scraper:/app
     working_dir: /app
-    # command: sh -c "npm install && node server.js" #prod
-    command: sh -c "npm install && npm run dev" # Alterado para usar npm run dev
+    command: sh -c "npm install && node server.js" #prod
+    #command: sh -c "npm install && npm run dev" # Alterado para usar npm run dev
     networks:
       - app-network
   db:
