--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,17 @@
-node_modules
+
 npm-debug.log
 screenshots
 .git
 .gitignore
 *.log 
+
+
+node_modules
+vendor
+storage/logs/*
+storage/framework/cache/*
+storage/framework/sessions/*
+storage/framework/views/*
+
+public/storage
+receita-scraper/node_modules
