--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,10 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: consultacpf_db
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_PASSWORD: dsasd3a231
+      MYSQL_ROOT_PASSWORD: 12#y3asd12$3rout
+      MYSQL_PASSWORD: 12#y3asd12$3
       MYSQL_USER: consultacpf_user
+      MYSQL_INITDB_SKIP_TZINFO: 1
     volumes:
       - ./docker-compose/mysql:/docker-entrypoint-initdb.d
       - mysql_data:/var/lib/mysql
