--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: consultacpf_db
-      MYSQL_ROOT_PASSWORD: 12#y3asd12$3rout
-      MYSQL_PASSWORD: 12#y3asd12$3
+      MYSQL_ROOT_PASSWORD: 12#y3asd12#3rout
+      MYSQL_PASSWORD: 12#y3asd12#3
       MYSQL_USER: consultacpf_user
       MYSQL_INITDB_SKIP_TZINFO: 1
     volumes:
