--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,22 +20,21 @@ services:
     networks:
       - consultacpf-network   
   db:
-    mysql:
     image: mariadb:10.4
-    container_name: facegate_db
-    volumes:
-      - $PWD/database:/var/lib/mysql
+    container_name: db-consultacpf
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: consultacpf_db
-      MYSQL_ROOT_PASSWORD: 12#y3asd12#3rout
-      MYSQL_PASSWORD: 12#y3asd12#3
+      MYSQL_ROOT_PASSWORD: 12#y3asd12$3rout
+      MYSQL_PASSWORD: 12#y3asd12$3
       MYSQL_USER: consultacpf_user
       MYSQL_INITDB_SKIP_TZINFO: 1
+    volumes:
+      - $PWD/database:/var/lib/mysql
     networks:
       - consultacpf-network
     ports:
-      - 3432:300
+      - 3432:3006
   nginx:
     image: nginx:alpine
     container_name: nginx-consultacpf
