--- a/docker-compose/nginx/consultacpf.conf
+++ b/docker-compose/nginx/consultacpf.conf
@@ -4,6 +4,15 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/public;
+    
+    # Adicionar estas linhas para preservar os headers de proxy
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+    proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
+    proxy_set_header X-Forwarded-Ssl $http_x_forwarded_ssl;
+    
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -12,7 +21,14 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        
+        # Adicionar estas linhas para passar os headers para o PHP-FPM
+        fastcgi_param HTTP_X_FORWARDED_PROTO $http_x_forwarded_proto if_not_empty;
+        fastcgi_param HTTP_X_FORWARDED_PORT $http_x_forwarded_port if_not_empty;
+        fastcgi_param HTTP_X_FORWARDED_SSL $http_x_forwarded_ssl if_not_empty;
+        fastcgi_param HTTPS $http_x_forwarded_proto if_not_empty;
     }
+    
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
