--- a/receita-scraper/package.json
+++ b/receita-scraper/package.json
@@ -8,10 +8,15 @@
         "dev": "nodemon server.js --legacy-watch"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "puppeteer": "^19.7.5",
         "body-parser": "^1.20.2",
-        "node-cache": "^5.1.2"
+        "express": "^4.18.2",
+        "node-cache": "^5.1.2",
+        "playwright": "^1.55.1",
+        "puppeteer": "^21.0.0",
+        "puppeteer-extra": "^3.3.6",
+        "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
+        "puppeteer-extra-plugin-stealth": "^2.11.2",
+        "selenium-webdriver": "^4.35.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
