--- a/receita-scraper/package.json
+++ b/receita-scraper/package.json
@@ -5,13 +5,26 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js --legacy-watch"
+        "start:otimizado": "node server-otimizado.js",
+        "dev": "nodemon server.js --legacy-watch",
+        "dev:otimizado": "nodemon server-otimizado.js --legacy-watch",
+        "scraper": "node scraper.js",
+        "scraper:otimizado": "node scraper-otimizado.js",
+        "scraper:visual": "node run-visual.js",
+        "scraper:headless": "node run-headless.js",
+        "test:cpf": "node scraper.js 45083784807 29/03/1995",
+        "test:cpf:otimizado": "node scraper-otimizado.js 45083784807 29/03/1995",
+        "test:cpf:visual": "VISUAL_MODE=true node scraper.js 45083784807 29/03/1995",
+        "clean": "node limpar-navegador.js",
+        "clean:fast": "node limpar-rapido.js",
+        "clean:webkit": "npx playwright install webkit",
+        "test:menu": "node teste-completo.js"
     },
     "dependencies": {
         "body-parser": "^1.20.2",
         "express": "^4.18.2",
         "node-cache": "^5.1.2",
-        "playwright": "^1.55.1",
+        "playwright": "^1.57.0",
         "puppeteer": "^21.0.0",
         "puppeteer-extra": "^3.3.6",
         "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
