--- a/receita-scraper/package.json
+++ b/receita-scraper/package.json
@@ -6,8 +6,12 @@
     "scripts": {
         "start": "node server.js",
         "start:otimizado": "node server-otimizado.js",
+        "start:stealth": "node server-stealth.js",
+        "start:ip-rotation": "node server-ip-rotation.js",
         "dev": "nodemon server.js --legacy-watch",
         "dev:otimizado": "nodemon server-otimizado.js --legacy-watch",
+        "dev:stealth": "nodemon server-stealth.js --legacy-watch",
+        "dev:ip-rotation": "nodemon server-ip-rotation.js --legacy-watch",
         "scraper": "node scraper.js",
         "scraper:otimizado": "node scraper-otimizado.js",
         "scraper:visual": "node run-visual.js",
@@ -18,18 +22,75 @@
         "clean": "node limpar-navegador.js",
         "clean:fast": "node limpar-rapido.js",
         "clean:webkit": "npx playwright install webkit",
-        "test:menu": "node teste-completo.js"
+        "test:menu": "node teste-completo.js",
+        "debug:captcha": "node debug-captcha.js",
+        "stealth": "node scraper-stealth.js",
+        "stealth:visual": "VISUAL_MODE=true node scraper-stealth.js",
+        "test:stealth": "node scraper-stealth.js 45083784807 29/03/1995",
+        "ip-rotation": "node scraper-ip-rotation.js",
+        "ip-rotation:visual": "VISUAL_MODE=true node scraper-ip-rotation.js",
+        "test:ip-rotation": "node scraper-ip-rotation.js 45083784807 29/03/1995",
+        "test:proxies": "node -e \"const ProxyManager = require('./proxy-manager'); new ProxyManager().testAllProxies();\"",
+        "exemplos": "node exemplos-integracao.js",
+        "consulta-rapida": "node -e \"require('./scraper-stealth').consultarCPF('45083784807', '29/03/1995').then(console.log)\"",
+        "consulta-ip": "node -e \"require('./scraper-ip-rotation').consultarCPF('45083784807', '29/03/1995').then(console.log)\"",
+        "setup-proxies": "node setup-proxies.js",
+        "get-free-proxies": "node proxy-scraper.js",
+        "get-free-proxies-test": "node proxy-scraper.js --test",
+        "test-proxies-scraper": "node test-proxies-scraper.js",
+        "setup-free-proxies": "node test-proxies-scraper.js --setup-only",
+        "scraper-with-proxies": "node scraper.js --proxies",
+        "scraper-auto-proxies": "node -e \"require('./scraper').consultarCPFComProxies('45083784807', '29/03/1995').then(console.log)\"",
+        "get-premium-proxies": "node proxy-sources-premium.js",
+        "test-reliable-proxies": "node test-reliable-proxies.js",
+        "test-reliable-with-scraper": "node test-reliable-proxies.js --test-scraper",
+        "setup-tor": "node tor-integration.js",
+        "test-tor": "node tor-integration.js 45083784807 29/03/1995",
+        "scraper-with-tor": "node scraper.js --tor",
+        "scraper-tor-visual": "set VISUAL_MODE=true && node scraper.js --tor",
+        "consulta-tor": "node -e \"require('./scraper').consultarCPFComTor('45083784807', '29/03/1995').then(console.log)\"",
+        "test-tor-scraper": "node test-tor-scraper.js",
+        "tor-status": "node test-tor-scraper.js --status",
+        "tor-compare": "node test-tor-scraper.js --compare",
+        "install-tor-linux": "node install-tor-linux.js",
+        "install-tor-system": "node install-tor-linux.js --system",
+        "install-tor-node": "node install-tor-linux.js --node",
+        "install-tor-binary": "node install-tor-linux.js --binary",
+        "test-tor-install": "node install-tor-linux.js --test",
+        "install-tor-npm": "node tor-npm-setup.js",
+        "test-tor-npm": "node test-tor-npm.js",
+        "find-tor-windows": "node find-tor-windows.js",
+        "fix-tor-windows": "node find-tor-windows.js",
+        "diagnose-tor": "node diagnose-tor-windows.js",
+        "tor-simple": "node tor-windows-simple.js",
+        "tor-simple-test": "node tor-windows-simple.js 45083784807 29/03/1995",
+        "test-scoop-tor": "node test-scoop-tor.js",
+        "linux": "node scraper-linux-chromium.js",
+        "linux:visual": "VISUAL_MODE=true node scraper-linux-chromium.js",
+        "test:linux": "node scraper-linux-chromium.js 45083784807 29/03/1995",
+        "test:linux:visual": "VISUAL_MODE=true node scraper-linux-chromium.js 45083784807 29/03/1995",
+        "test:thorium": "node scraper-linux-chromium.js 45083784807 29/03/1995",
+        "test:thorium:visual": "VISUAL_MODE=true node scraper-linux-chromium.js 45083784807 29/03/1995",
+        "tor:linux": "node scraper-linux-tor.js",
+        "tor:linux:visual": "VISUAL_MODE=true node scraper-linux-tor.js",
+        "test:tor:linux": "node scraper-linux-tor.js 45083784807 29/03/1995",
+        "test:tor:linux:visual": "VISUAL_MODE=true node scraper-linux-tor.js 45083784807 29/03/1995",
+        "check-tor": "node -e \"require('./scraper-linux-tor').verificarTorStatus().then(s => console.log('TOR ativo:', s.ativo))\"",
+        "my-tor-ip": "node -e \"require('./scraper-linux-tor').obterIpTor().then(ip => console.log('IP TOR:', ip))\""
     },
     "dependencies": {
         "body-parser": "^1.20.2",
         "express": "^4.18.2",
         "node-cache": "^5.1.2",
+        "playright": "^0.0.22",
         "playwright": "^1.57.0",
         "puppeteer": "^21.0.0",
         "puppeteer-extra": "^3.3.6",
         "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
         "puppeteer-extra-plugin-stealth": "^2.11.2",
-        "selenium-webdriver": "^4.35.0"
+        "selenium-webdriver": "^4.35.0",
+        "socks-proxy-agent": "^8.0.5",
+        "tor-request": "^3.1.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
