--- a/receita-scraper/package.json
+++ b/receita-scraper/package.json
@@ -71,10 +71,11 @@
         "test:linux:visual": "VISUAL_MODE=true node scraper-linux-chromium.js 45083784807 29/03/1995",
         "test:thorium": "node scraper-linux-chromium.js 45083784807 29/03/1995",
         "test:thorium:visual": "VISUAL_MODE=true node scraper-linux-chromium.js 45083784807 29/03/1995",
-        "tor:linux": "node scraper-linux-tor.js",
-        "tor:linux:visual": "VISUAL_MODE=true node scraper-linux-tor.js",
-        "test:tor:linux": "node scraper-linux-tor.js 45083784807 29/03/1995",
-        "test:tor:linux:visual": "VISUAL_MODE=true node scraper-linux-tor.js 45083784807 29/03/1995",
+        "ensure-tor": "bash ensure-tor.sh",
+        "tor:linux": "bash ensure-tor.sh && node scraper-linux-tor.js",
+        "tor:linux:visual": "bash ensure-tor.sh && VISUAL_MODE=true node scraper-linux-tor.js",
+        "test:tor:linux": "bash ensure-tor.sh && node scraper-linux-tor.js 45083784807 29/03/1995",
+        "test:tor:linux:visual": "bash ensure-tor.sh && VISUAL_MODE=true node scraper-linux-tor.js 45083784807 29/03/1995",
         "check-tor": "node -e \"require('./scraper-linux-tor').verificarTorStatus().then(s => console.log('TOR ativo:', s.ativo))\"",
         "my-tor-ip": "node -e \"require('./scraper-linux-tor').obterIpTor().then(ip => console.log('IP TOR:', ip))\""
     },
